# HiraethEngine

./: CMakeLists.txt  README.md
include/: Camera.h  Material.h  Menu.h  Mesh.h  Model.h  ModelLibrary.h  Scene.h  SceneParameters.h  Shaders.h  Shapes.h  Texture.h  View.h  utils.h
include/glad/: glad.h
lib/imgui/: imgui.h  imstb_truetype.h
resources/models/apartment/: apartment.fbx
resources/models/road/: untitled.mtl
resources/models/tower/: wooden watch tower2.mtl
resources/scenes/: cat.json
resources/shaders/: lightFrag.glsl  textureFrag.glsl  vert.glsl
src/: Material.cpp  Menu.cpp  Mesh.cpp  Model.cpp  ModelLibrary.cpp  Scene.cpp  Shaders.cpp  Shapes.cpp  Texture.cpp  View.cpp  glad.c  main.cpp
